--- a/css/style.css
+++ b/css/style.css
@@ -294,12 +294,38 @@ small{
 	width:10%;
 }
 
+/*formulaire*/
+
 .address{
 	margin:8px;
 }
 
 .souspartie{
 	padding:8px;
+}
+
+input, textarea {
+    outline: none;
+    border-radius: 4px;
+    height: 25px;
+    border: 1px solid #ddd;
+    margin-top: 5px;
+}
+
+.erreur__formulaire input, .form-group.erreur__formulaire textarea {
+    border: 2px solid #CDCD37;
+}
+
+.form-group.erreur__formulaire label {
+    color: #CDCD37;
+}
+
+.erreur__formulaire::after {
+    content: 'Ce champs est invalide';
+    display: block;
+    color: #CDCD37;
+    padding: 5px 0;
+    font-size: .9rem;
 }
 
 /*confirmationdecommande*/
