--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ footer {
 /*bouton*/
 
 .btn {
-	margin: 1rem auto;
+	margin: 1rem 1rem;
 	border-radius: 0.8em;
 	border: none;
 	cursor: pointer;
