--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,10 @@ main {
 		align-self:stretch;
 }
 
+.ficheproduit-contenant__index > a{
+	margin:0 0 1rem 0;
+}
+
 /*panier*/
 
 .panier-tableau{
