--- a/css/style.css
+++ b/css/style.css
@@ -238,10 +238,6 @@ main {
 		align-self:stretch;
 }
 
-.ficheproduit-contenant__index > a{
-	margin:0 1.1 1rem 0;
-}
-
 /*panier*/
 
 .panier-tableau{
@@ -390,6 +386,7 @@ footer {
 
 .btn__achat {
 	width : 300px;
+	margin : 1rem;
 }
 
 .btn__achat > i {
