--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,10 @@ p{
 header {
 		width:100%;
 		margin:0;
-		display: -webkit-box;
+}
+
+ul {
+	display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
 		-webkit-box-pack: justify;
